# P4Framework

./: .build_calc_2310241708.log.swp  .gitignore  .gitmodules  Makefile  README.md  TODO
Examples/reverse_tuple/hls/exchangeFivetuple/: .cproject  .project  .vitis_hls_log_all.xml  CMakeLists.txt  exchangeFivetuple.cpp  exchangeFivetuple.hpp  hls.app
Examples/reverse_tuple/hls/exchangeFivetuple/.apc/: autopilot.apfmapping
Examples/reverse_tuple/hls/exchangeFivetuple/include/: tuple_types.h
Examples/reverse_tuple/hls/exchangeFivetuple/solution1/: script.tcl  solution1.aps  solution1.directive  solution1_data.json
Examples/reverse_tuple/hls/exchangeFivetuple/solution1/.autopilot/: .automg_exit  .autopilot_exit
Examples/reverse_tuple/hls/exchangeFivetuple/solution1/.autopilot/db/: .message_impl.xml  .message_syn.xml  a.g.0.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.g.lto.bc  a.o.1.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  all.directive.json  apatb_exchangeFivetuple.cpp  apatb_exchangeFivetuple_ir.bc  apatb_exchangeFivetuple_ir.ll  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  dut.hcp  exchangeFivetuple.adb  exchangeFivetuple.aemf  exchangeFivetuple.bind.adb  exchangeFivetuple.bind.adb.xml  exchangeFivetuple.compgen.tcl  exchangeFivetuple.constraint.tcl  exchangeFivetuple.design.xml  exchangeFivetuple.g.bc  exchangeFivetuple.pp.0.cpp  exchangeFivetuple.pp.0.cpp.clang-tidy.loop-label.diag.yml  exchangeFivetuple.pp.0.cpp.clang.diag.xml  exchangeFivetuple.rtl_wrap.cfg.tcl  exchangeFivetuple.sched.adb  exchangeFivetuple.sched.adb.xml  exchangeFivetuple.tbgen.tcl  exchangeFivetuple.verbose.bind.rpt  exchangeFivetuple.verbose.bind.rpt.xml  exchangeFivetuple.verbose.rpt  exchangeFivetuple.verbose.rpt.xml  (+8 more)
Examples/reverse_tuple/hls/exchangeFivetuple/solution1/.debug/: exchangeFivetuple.protoinst
Examples/reverse_tuple/hls/exchangeFivetuple/solution1/impl/ip/: component.xml  run_ippack.tcl  sysgen_info.xml  vivado.jou
Examples/reverse_tuple/hls/exchangeFivetuple/solution1/syn/report/: csynth.rpt  csynth.xml  exchangeFivetuple_csynth.rpt  exchangeFivetuple_csynth.xml
Examples/reverse_tuple/hls/exchangeFivetuple/solution1/syn/verilog/: exchangeFivetuple.v
Examples/reverse_tuple/hls/exchangeFivetuple/src/: exchangeFivetuple_hls_wrapper.cpp  exchangeFivetuple_kernel.cpp  tuple_types.h
Examples/save_src_dest/user_externs/: CMakeLists.txt  Readme.md
Examples/save_src_dest/user_externs/include/bm/bm_sim/: random.h
Examples/save_src_dest/user_externs/src/: user_externs.cpp
component/user_externs/: CMakeLists.txt  Readme.md  user_externs.cpp  user_externs.p4
component/user_externs/src/: user_externs.cpp
templatePlugin/: box_250mhz  (+3 more)
(+248 files in other folders)
